nobase_include_HEADERS = po6/io/fd.h po6/error.h po6/noncopyable.h \
						 po6/threads/rwlock.h po6/threads/cond.h \
						 po6/threads/spinlock.h po6/threads/thread.h \
						 po6/threads/mutex.h po6/threads/barrier.h \
						 po6/pathname.h po6/net/ipaddr.h po6/net/location.h \
						 po6/net/socket.h
